Fixed overflow issue on movie releases

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -8,3 +8,7 @@ body
   display: inline-block
   vertical-align: middle
   float: none
+
+
+.release
+  overflow: hidden
